[package]
name = "pb-rs"
version = "0.1.20240907"

[dependencies]
nom = "7"
log = "0.4.22"
clap = { version = "2.34.0", optional = true }
env_logger = { version = "0.10.2", optional = true }

[dev-dependencies]
walkdir = "2.5.0"

[features]
default = ["std"]
std = ["clap", "env_logger"]
generateImplFromForEnums = []
