[package]
name = "quick-protobuf"
description = "A pure Rust protobuf (de)serializer. Quick."
version = "0.1.20240907"

[dependencies]
byteorder = { version = "1.5.0", default-features = false }

[dev-dependencies]
lazy_static = "1.5.0"
trybuild = "1.0.99"
quickcheck = "1"

[features]
default = ["std"]
std = ["byteorder/std"]
